[metadata]
name = stm_layout
version = 0.1.0
author = Terry Greeniaus
author_email = terrygreeniaus@gmail.com
description = Curses-based tool for configuring STM32 pins.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = stm32 modm-devices pin pinout
url = https://github.com/tgree/stm_layout
license = License :: OSI Approved :: MIT License
classifiers =
    Operating System :: POSIX
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages = stm_layout
install_requires =
    modm-devices
    tgcurses

[options.entry_points]
console_scripts =
    stm_layout = stm_layout.stm_layout:_main
